--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -517,13 +517,13 @@ ul {
 
 @media only screen and (max-width: 767px) {
   .project-box {
-    margin-top: 20rem;
+    margin-top: 30px;
   }
 }
 
 @media only screen and (max-width: 450px) {
   .project-box {
-    margin-top: 22rem;
+    margin-top: 30px;
   }
 }
 
